fix visibility issue in services icons

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -31,7 +31,7 @@ html.light .from-gray-900 {
 /* Our services slider icons theme */
 
 html.light .bg-yellow-500\/10 {
-  background-color: rgb(213 173 50 / 58%)
+  background-color: rgba(0, 0, 0, 0.58)
 }
 
 /* Light theme inputs */
